Upgrade to Errai 4.0, GWT 2.8.0-beta1, and Java 8.